Fix apps scrollbar. Closes #132

--- a/css/3rdparty/webodf/editor.css
+++ b/css/3rdparty/webodf/editor.css
@@ -1,4 +1,4 @@
-html, body, #mainContainer {
+body.claro, #mainContainer {
     width: 100%;
     height: 100%;
     margin: 0;
